--- a/Templates/partials/root/navbar.html
+++ b/Templates/partials/root/navbar.html
@@ -11,7 +11,7 @@
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">DB Operations<i class="material-icons right">arrow_drop_down</i></a></li>
-              <li><a target="_blank"  href="http://localhost:8000/admin/root/rigtable/">Admin Panel <i class="material-icons right">person_pin</i> </a></li> 
+              <li><a target="_blank"  href="/admin/root/rigtable/">Admin Panel <i class="material-icons right">person_pin</i> </a></li> 
               <li><a  class=" modal-trigger" href="#modal4"  >Info  <i class="material-icons right">info_outline</i></a></li> 
               <li><a  class=" modal-trigger" href="#modal1"  >Add RIG  <i class="material-icons right">add</i></a></li> 
               <li><a  class=" modal-trigger" href="#modal3"  >Upload File <i class="material-icons right">upload</i></a></li> 
