--- a/Templates/root/index.html
+++ b/Templates/root/index.html
@@ -149,7 +149,7 @@
                     <br>
                 </div>
 
-                <button style="width: 25%;" type="submit" class="btn right">Upload RIG</button>
+                <button style="width: 25%;" type="submit" class="btn right">Upload Scanner File</button>
             </form>
         </div>
     </div>
@@ -243,8 +243,19 @@
 
 <!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content" style="min-width:230px !important">
+
+    
+    
+    <li><a  class=" modal-trigger" href="#modal1"  >Add RIG  <i class="material-icons right">add</i></a></li> 
+    <li class="divider"></li> 
+    
+    <li><a  class=" modal-trigger" href="#modal3"  >Upload File <i class="material-icons right">upload</i></a></li> 
+    <li class="divider"></li> 
+
     <li><a id="generate_latest_report" >Generate Latest Report</a></li>
     <li class="divider"></li> 
+
+
     <!-- <li><a class="red-text"  href="/reset_records" >Reset Records</a></li> -->
     <li class="divider"></li> 
     <li><a class="red-text" href="/remove_warnings">Remove Warnings</a></li>
