--- a/Templates/root/reports_dir.html
+++ b/Templates/root/reports_dir.html
@@ -7,7 +7,7 @@
   
 <div style="margin:5px 10px"> 
       
-  <a href="/delete_reports_dir" class="btn right red">Dleete All Reports</a>
+  <a href="/delete_reports_dir" class="btn right red">Delete All Reports</a>
   <br>
   <br>
   <br>
