--- a/Templates/root/index.html
+++ b/Templates/root/index.html
@@ -164,7 +164,7 @@
         <thead>
             <tr>
                 <!-- <th class="numeric-sort">Rig Barcode</th> -->
-                <th class="numeric-sort">Packed Value</th>
+                <th class="numeric-sort">Rig Number</th>
                 <th class="numeric-sort">Container and Harness</th>
                 <th class="numeric-sort">Main Canopy Line set</th>
                 <th class="numeric-sort">Main Canopy</th>
