--- a/Templates/root/charts.html
+++ b/Templates/root/charts.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}v
 {% block 'mainbody' %} 
-<input download="my-file-name.png" type="button" class="btn grey darken-3" value="Downlaod Chart" id="take_screenshot" style="margin:5px 10px">
+<input download="my-file-name.png" type="button" class="btn grey darken-3" value="Download Chart" id="take_screenshot" style="margin:5px 10px">
 
 
 
