--- a/Templates/root/charts.html
+++ b/Templates/root/charts.html
@@ -15,15 +15,15 @@
 </div>
 
 
-<br><br>
+ 
   
 <div style="margin:5px 10px"> 
         
     <div class="card card-chart  ">
       <div style="padding:5px 10px">
-        <!-- <h5 class="card-category">Daily Sales</h5>  -->
       </div>
       <div class="card-body" id="resultant_chart">
+        <h6 class="card-category">  </h6> 
         <div class="chart-area">
           <canvas style="height:450px" id="CountryChart"></canvas>
         </div>
