--- a/Templates/root/index.html
+++ b/Templates/root/index.html
@@ -127,7 +127,7 @@
             <center>
                 <h3><b>Upload Output File</b></h3>
             </center> 
-            <form action="" method="POST" id="form3">
+            <form   id="form3">
 
                 <div class="input-field col l12 m12 s12">
                     <input id="file" name="file" type="file" required>
